--- a/port/css/style2.css
+++ b/port/css/style2.css
@@ -5,7 +5,7 @@ html {width: 100%; height: 100%; margin: 0; padding: 0;}
 #contents {}
 #section1 {height: 100vh; background: #000;} 
 #section2 {height: 7000px; background: #000;}
-#section3 {}
+#section3 {height: 500px; background: red;}
 #section4 {}
 #section5 {}
 #section6 {} 
@@ -246,6 +246,24 @@ html {width: 100%; height: 100%; margin: 0; padding: 0;}
 
 
 
+#section3 h2 {
+    position: fixed; left: 50%; top: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 8vw; 
+    color: #000;background: #fff;
+    width: 1000px; height: 300px;
+    border: 4px solid red
+    
+}
+#section3 h2.show {
+    animation: clip 2s ease alternate;    
+}
+
+@keyframes clip {
+    0% {clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);}
+    50% {clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 0% 100%);}
+    100% {clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);}
+}
 
 
 
