--- a/port/css/style5.css
+++ b/port/css/style5.css
@@ -1011,66 +1011,41 @@ h1.main-tit .split span {
 .script-txt-wrap {
     position: fixed; top: 45%; left: 10%;
     font-family: 'Ilisarniq-Black';
-    transition: all 0.5s;
-    transform-origin: left;
+    background: #1b1b1b;
+    width: 67.146vw;
+    display: none;
 }
-.script-txt-wrap.stw1 {
-    transform: scaleX(0);
+.script-txt-wrap.clip {
+    animation: clip 1s ease;
 }
-.script-txt-wrap.stw2 {
-    transform: scaleX(0);
-}
-.script-txt-wrap.stw3 {
-    transform: scaleX(0);
-}
-.script-txt-wrap.stw1.r1 {
-    transform: scaleX(1);
-}
-.script-txt-wrap.stw2.r2 {
-    transform: scaleX(1);
-}
-.script-txt-wrap.stw3.r3 {
-    transform: scaleX(1);
-}
-.script-txt-wrap::before {
-    content: '';
-    position: absolute; top: 0; left: 0;
-    width: 100%; height: 100%;
-    background: #fff;
-    z-index: 1;
-    transition: all 0.5s 0.5s;
-    transform-origin: right
-}
-.script-txt-wrap.stw1.r1::before {
-    background: #fff;
-    transform: scaleX(0);
-}
-.script-txt-wrap.stw2.r2::before {
-    background: #fff;
-    transform: scaleX(0);
-}
-.script-txt-wrap.stw3.r3::before {
-    background: #fff;
-    transform: scaleX(0);
+
+@keyframes clip {
+    0% {clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);}
+    50% {clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 0% 100%);}
+    100% {clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);}
 }
 .script-title {
     font-size: 10.417vw;
-    color: #fff;
+    color: #1b1b1b;
     text-transform: uppercase;
     line-height: 1;
-    text-indent: -15px;
+    /* text-indent: -15px; */
 }
 .script-what {
     font-size: 1.875vw;
-    color: #fff;
+    color: #1b1b1b;
     text-transform: uppercase;
+    padding-left: 13px;
+    box-sizing: border-box;
 }
 .script-desc {
     font-family: 'S-CoreDream-3Light';
-    width: 33.906vw;
+    width: 34.906vw;
     font-size: 0.938vw;
-    color: #fff;
+    color: #1b1b1b;
     letter-spacing: 0.5px;
+    padding-left: 12px;
+    box-sizing: border-box;
 }
 .parallax {
     position: relative;
