--- a/port/css/style5.css
+++ b/port/css/style5.css
@@ -1255,9 +1255,11 @@ h1.main-tit .split span {
     width: 146px; height: 146px;
     border-radius: 50%;
     border: 2px solid #AA5018; 
+    background-color: #1b1b1b;
     color: #fff;
     font-size: 16px;
     letter-spacing: 5.8px;
+    text-indent: 5px;
     white-space: nowrap;
     position: absolute; top: 193px; right: 150px;
 }
@@ -1268,6 +1270,9 @@ h1.main-tit .split span {
 .contact-btn:hover {
     color: #fff;
     background: #AA5018;
+}
+.contact-btn:focus {
+    outline: none;
 }
 .contact-btn.active3 {
     background: #AA5018;
