--- a/port/css/style5.css
+++ b/port/css/style5.css
@@ -1237,7 +1237,8 @@ h1.main-tit .split span {
     color: #fff;
     font-family: 'Ilisarniq-Light';
 }
-.contact-content input {
+.contact-content input,
+.contact-content textarea {
     width: 400px;
     font-size: 24px;
     background-color: transparent;
@@ -1255,7 +1256,7 @@ h1.main-tit .split span {
     width: 146px; height: 146px;
     border-radius: 50%;
     border: 2px solid #AA5018; 
-    background-color: #1b1b1b;
+    background-color: transparent;
     color: #fff;
     font-size: 16px;
     letter-spacing: 5.8px;
