--- a/port/css/style5.css
+++ b/port/css/style5.css
@@ -1227,9 +1227,8 @@ h1.main-tit .split span {
 }
 .contact-content {
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    position: absolute; top: 60%; left: 50%;
+    justify-content: space-between;
+    position: absolute; top: 65%; left: 50%;
     transform: translate(-50%, -50%);
     font-size: 24px;
     width: 868px;
@@ -1237,20 +1236,33 @@ h1.main-tit .split span {
     color: #fff;
     font-family: 'Ilisarniq-Light';
 }
+.contact-content .question-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    position: relative;
+    top: -5vh;
+}
+.contact-content form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
 .contact-content input,
 .contact-content textarea {
+    display: block;
     width: 400px;
     font-size: 24px;
     background-color: transparent;
     border: none;
     border-bottom: 1px solid #fff;
-    align-self: flex-end;
     color: #fff;
     font-family: 'Ilisarniq-Light';
     outline: none;
 }
 .contact-btn,
 button {
+    position: absolute; top: -30%; right: -30%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1263,7 +1275,7 @@ button {
     letter-spacing: 5.8px;
     text-indent: 5px;
     white-space: nowrap;
-    position: absolute; top: 193px; right: 150px;
+    cursor: pointer;
 }
 .contact-btn,
 button {
