--- a/port/css/style5.css
+++ b/port/css/style5.css
@@ -1025,28 +1025,25 @@ h1.main-tit .split span {
     position: absolute; top: 45%; left: 10%;
     font-family: 'Ilisarniq-Black';
     width: 67.146vw;
-    transition: all 0.5s cubic-bezier(0.15, 0.65, 0.2, 1);
+    /* transition: all 0.5s cubic-bezier(0.15, 0.65, 0.2, 1);
     transform-origin: left;
-    transform: scaleX(0);
+    transform: scaleX(0); */
     z-index: 100;
 }
-.script-txt-wrap.reveal {
+/* .script-txt-wrap.reveal {
     transform: scaleX(1);
-}
-.script-txt-wrap::before {
+} */
+/* .script-txt-wrap::before {
     content: '';
     position: absolute; top: 0; left: 0;
     width: 100%; height: 100%;
     background: #fff;
     transition: all 0.5s 0.5s cubic-bezier(0.15, 0.65, 0.2, 1);
     transform-origin: right;
-}
-.script-txt-wrap.reveal::before {
+} */
+/* .script-txt-wrap.reveal::before {
     transform: scaleX(0);
-}
-.script-txt-wrap.clip {
-    animation: clip 1.6s ease;
-}
+} */
 .script-title {
     font-size: 10.417vw;
     color: #fff;
@@ -1070,6 +1067,56 @@ h1.main-tit .split span {
     padding-left: 12px;
     box-sizing: border-box;
 }
+.script-title span,
+.script-what span,
+.script-desc span {
+    position: relative;
+    display: inline-block;
+    transition: all 0.5s cubic-bezier(0.15, 0.65, 0.2, 1);
+    transform-origin: left;
+    transform: scaleX(0);
+}
+.script-what span {
+    transition-delay: 0.5s;
+}
+.script-desc span {
+    transition-delay: 1s;
+}
+.script-txt-wrap.reveal .script-title span,
+.script-txt-wrap.reveal .script-what span,
+.script-txt-wrap.reveal .script-desc span {
+    transform: scaleX(1);
+}
+.script-title span::before,
+.script-what span::before,
+.script-desc span::before {
+    content: '';
+    position: absolute; top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: #fff;
+    transition: all 0.5s 0.5s cubic-bezier(0.15, 0.65, 0.2, 1);
+    transform-origin: right;
+}
+.script-what span::before {
+    transition-delay: 1s;
+}
+.script-desc span::before {
+    transition-delay: 1.5s;
+}
+.script-txt-wrap.reveal .script-title span::before,
+.script-txt-wrap.reveal .script-what span::before,
+.script-txt-wrap.reveal .script-desc span::before {
+    transform: scaleX(0);
+}
+/* .script-txt-wrap.reveal .script-title span::before {
+    background: rgb(255, 94, 0);
+}
+.script-txt-wrap.reveal .script-what span::before {
+    background: rgb(21, 255, 0);
+}
+.script-txt-wrap.reveal .script-desc span::before {
+    background: rgb(0, 132, 255);
+} */
 .script-top {
     position: relative;
     /* height: 100vh; */
@@ -1106,6 +1153,53 @@ h1.main-tit .split span {
 }
 .img-box img {
     width: 100%; height: 100%;
+}
+.hover-wrap {
+    width: 100px;
+    height: 100%;
+}
+.pulse-button {
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -50px;
+    margin-top: -50px;
+    display: block;
+    width: 100px;
+    height: 100px;
+    font-size: 1.3em;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 100px;
+    letter-spacing: 2px;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    background: #5a99d4;
+    cursor: pointer;
+    box-shadow: 0 0 0 0 rgba(#5a99d4, 0.5);
+    animation: pulse 1.5s infinite;
+  }
+  .pulse-button:hover {
+    animation: none;
+  }
+.scriptimg-wrap:hover .pulse-button {
+    transition: opacity .5s;
+    opacity: 1;
+}
+@keyframes pulse {
+    0% {
+        transform: scale(0.9)
+    }
+    70% {
+        transform: scale(1);
+        box-shadow: 0 0 0 2vw rgba(#5a99d4, 0.5);
+    }
+    100% {
+        transform: scale(0.9);
+        box-shadow: 0 0 0 0 rgba(#5a99d4, 0.5);
+    }
 }
 .click-wrap {
     width: 100%;
@@ -1220,7 +1314,8 @@ h1.main-tit .split span {
 /* section7 */
 .contact-title h2 {
     font-family: 'Ilisarniq-Black';
-    font-size: 144px;
+    /* font-size: 144px; */
+    font-size: 7.500vw;
     color: #fff;
     text-transform: uppercase;
     padding-top: 30px;
@@ -1230,8 +1325,10 @@ h1.main-tit .split span {
     justify-content: space-between;
     position: absolute; top: 65%; left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 24px;
-    width: 868px;
+    /* font-size: 24px; */
+    font-size: 1.250vw;
+    /* width: 868px; */
+    width: 45.208vw;
     height: 404px;
     color: #fff;
     font-family: 'Ilisarniq-Light';
@@ -1251,8 +1348,10 @@ h1.main-tit .split span {
 .contact-content input,
 .contact-content textarea {
     display: block;
-    width: 400px;
-    font-size: 24px;
+    /* width: 400px; */
+    width: 20.833vw;
+    /* font-size: 24px; */
+    font-size: 1.250vw;
     background-color: transparent;
     border: none;
     border-bottom: 1px solid #fff;
@@ -1266,7 +1365,8 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 146px; height: 146px;
+    /* width: 146px; height: 146px; */
+    width: 7.604vw; height: 7.604vw;
     border-radius: 50%;
     border: 2px solid #AA5018; 
     background-color: transparent;
