--- a/port/css/style5.css
+++ b/port/css/style5.css
@@ -1154,52 +1154,51 @@ h1.main-tit .split span {
 .img-box img {
     width: 100%; height: 100%;
 }
-.hover-wrap {
-    width: 100px;
-    height: 100%;
-}
-.pulse-button {
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -50px;
-    margin-top: -50px;
+.btn-6 {
+    position: absolute; top: 50%; left: 50%;
+    transform: translate(-50%, -50%);
     display: block;
-    width: 100px;
-    height: 100px;
-    font-size: 1.3em;
-    text-transform: uppercase;
-    text-align: center;
-    line-height: 100px;
-    letter-spacing: 2px;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    background: #5a99d4;
-    cursor: pointer;
-    box-shadow: 0 0 0 0 rgba(#5a99d4, 0.5);
-    animation: pulse 1.5s infinite;
-  }
-  .pulse-button:hover {
-    animation: none;
-  }
-.scriptimg-wrap:hover .pulse-button {
-    transition: opacity .5s;
-    opacity: 1;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
 }
-@keyframes pulse {
-    0% {
-        transform: scale(0.9)
-    }
-    70% {
-        transform: scale(1);
-        box-shadow: 0 0 0 2vw rgba(#5a99d4, 0.5);
-    }
-    100% {
-        transform: scale(0.9);
-        box-shadow: 0 0 0 0 rgba(#5a99d4, 0.5);
-    }
+.btn-6 strong {
+    text-transform: uppercase;
+    font-size: 50px;
+    color: #a7b980;
+    transition: color 0.7s ease-in-out;
+    position: absolute; top: 50%; left: 50%;
+    transform: scale(1) translate(-50%, -50%);
+    font-family: 'Ilisarniq-Regular';
+    animation: scale 1s infinite;
+    /* transform-origin: center center; */
+}
+@keyframes scale {
+    0% {transform: scale(1) translate(-50%, -50%);}
+    50% {transform: scale(1.1) translate(-50%, -50%);}
+    100% {transform: scale(1) translate(-50%, -50%);}
+}
+
+.btn-6:hover strong {
+    color: #fff;
+    animation-play-state: paused;
+}
+.btn-6 span {
+    position: absolute;
+    display: block;
+    width: 0;
+    height: 0;
+    border-radius: 50%;
+    background-color: #5b6840;
+    transition: width 0.7s ease-in-out, height 0.7s ease-in-out;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+}
+.btn-6:hover span {
+    /*  hover시 시간 transition: width 1s ease-in-out, height 1s ease-in-out; */
+    width: 300%;
+    height: 300%;
 }
 .click-wrap {
     width: 100%;
