--- a/port/css/style5.css
+++ b/port/css/style5.css
@@ -1045,27 +1045,35 @@ h1.main-tit .split span {
     transform: scaleX(0);
 } */
 .script-title {
-    font-size: 10.417vw;
     color: #fff;
     text-transform: uppercase;
-    line-height: 1;
+    /* line-height: 1; */
     /* text-indent: -15px; */
 }
 .script-what {
-    font-size: 1.875vw;
     color: #fff;
     text-transform: uppercase;
-    padding-left: 13px;
+    padding: 10px 0px 10px 13px;
     box-sizing: border-box;
 }
 .script-desc {
     font-family: 'S-CoreDream-3Light';
     width: 34.906vw;
-    font-size: 0.938vw;
     color: #fff;
     letter-spacing: 0.5px;
     padding-left: 12px;
     box-sizing: border-box;
+}
+.script-title span {
+    font-size: 10.417vw;
+    line-height: 7.7vw;
+}
+.script-what span {
+    font-size: 1.875vw;
+    line-height: 1.7vw;
+}
+.script-desc span {
+    font-size: 0.938vw;
 }
 .script-title span,
 .script-what span,
@@ -1087,13 +1095,21 @@ h1.main-tit .split span {
 .script-txt-wrap.reveal .script-desc span {
     transform: scaleX(1);
 }
+.script-title span::before {
+    position: absolute; top: 1vw; left: 0;
+}
+.script-what span::before {
+    position: absolute; top: 0.15vw; left: 0;
+}
+.script-desc span::before {
+    position: absolute; top: 0vw; left: 0;
+}
 .script-title span::before,
 .script-what span::before,
 .script-desc span::before {
     content: '';
-    position: absolute; top: 0; left: 0;
     width: 100%; height: 100%;
-    background: #fff;
+    background: rgba(255,255,255,1);
     transition: all 0.5s 0.5s cubic-bezier(0.15, 0.65, 0.2, 1);
     transform-origin: right;
 }
@@ -1108,15 +1124,6 @@ h1.main-tit .split span {
 .script-txt-wrap.reveal .script-desc span::before {
     transform: scaleX(0);
 }
-/* .script-txt-wrap.reveal .script-title span::before {
-    background: rgb(255, 94, 0);
-}
-.script-txt-wrap.reveal .script-what span::before {
-    background: rgb(21, 255, 0);
-}
-.script-txt-wrap.reveal .script-desc span::before {
-    background: rgb(0, 132, 255);
-} */
 .script-top {
     position: relative;
     /* height: 100vh; */
@@ -1140,6 +1147,8 @@ h1.main-tit .split span {
     border-radius: 15px;
     cursor: pointer;
     transition: transform 0.75s cubic-bezier(0.15, 0.65, 0.2, 1);
+
+    overflow: hidden;
 }
 .scriptimg-wrap.rotate {
     transform: 
@@ -1154,16 +1163,75 @@ h1.main-tit .split span {
 .img-box img {
     width: 100%; height: 100%;
 }
-.btn-6 {
-    position: absolute; top: 50%; left: 50%;
-    transform: translate(-50%, -50%);
+/* .btn-11 {
     display: block;
     overflow: hidden;
     width: 100%;
-    height: 100%;
-    border-radius: 15px;
+    height: 80px;
+    max-width: 250px;
+    margin: 1rem auto;
+    text-transform: uppercase;
+    border: 1px solid currentColor;
+} */
+.scriptimg-wrap:before, .scriptimg-wrap:after {
+    position: absolute;
+    top: 50%;
+    content: '';
+    width: 20px;
+    height: 20px;
+    background-color: #816878;
+    border-radius: 50%;
 }
-.btn-6 strong {
+.scriptimg-wrap:before {
+    left: -20px;
+    transform: translate(-50%, -50%);
+}
+.scriptimg-wrap:after {
+    right: -20px;
+    transform: translate(50%, -50%);
+}
+.scriptimg-wrap:hover {
+     color: #e0d9dd;
+}
+.scriptimg-wrap:hover:before {
+    animation: criss-cross-left 0.8s both;
+    animation-direction: alternate;
+}
+.scriptimg-wrap:hover:after {
+    animation: criss-cross-right 0.8s both;
+    animation-direction: alternate;
+}
+@keyframes criss-cross-left {
+    0% {
+        left: -20px;
+    }
+    50% {
+        left: 50%;
+        width: 20px;
+        height: 20px;
+    }
+    100% {
+        left: 50%;
+        width: 200%;
+        height: 200%;
+    }
+}
+@keyframes criss-cross-right {
+    0% {
+        right: -20px;
+    }
+    50% {
+        right: 50%;
+        width: 20px;
+        height: 20px;
+    }
+    100% {
+        right: 50%;
+        width: 200%;
+        height: 200%;
+    }
+}
+.scriptimg-wrap span {
     text-transform: uppercase;
     font-size: 50px;
     color: #a7b980;
@@ -1172,7 +1240,7 @@ h1.main-tit .split span {
     transform: scale(1) translate(-50%, -50%);
     font-family: 'Ilisarniq-Regular';
     animation: scale 1s infinite;
-    /* transform-origin: center center; */
+    z-index: 1;
 }
 @keyframes scale {
     0% {transform: scale(1) translate(-50%, -50%);}
@@ -1180,25 +1248,9 @@ h1.main-tit .split span {
     100% {transform: scale(1) translate(-50%, -50%);}
 }
 
-.btn-6:hover strong {
+.scriptimg-wrap:hover span {
     color: #fff;
     animation-play-state: paused;
-}
-.btn-6 span {
-    position: absolute;
-    display: block;
-    width: 0;
-    height: 0;
-    border-radius: 50%;
-    background-color: #5b6840;
-    transition: width 0.7s ease-in-out, height 0.7s ease-in-out;
-    transform: translate(-50%, -50%);
-    z-index: -1;
-}
-.btn-6:hover span {
-    /*  hover시 시간 transition: width 1s ease-in-out, height 1s ease-in-out; */
-    width: 300%;
-    height: 300%;
 }
 .click-wrap {
     width: 100%;
